# wk-pool

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  _tmp_teams.py  keys.txt  start-dev.ps1  tmp-tournament.json
src/backend/: .env.example  .gitignore  AGENTS.md  README.md  _audit_sign.py  nixpacks.toml  pyproject.toml  railway.json  railway.sync.json
src/backend/app/: __init__.py  __main__.py  crystal_ball.py  crystal_ball_research.py  display_text.py  espn_soccer_api.py  football_api.py  football_sync.py  group_form.py  knockout_bracket.py  knockout_form.py  match_results_store.py  poll_schedule.py  pool_edge.py  prediction_narrative.py  prediction_overrides.py  predictions.py  score_prediction.py  teams.py  tournament.py  webapp.py
src/backend/reports/: group_match_context_REVIEW.md  group_match_context_audit.csv
src/backend/scripts/: _analyze_ko_scores.py  _audit_bootstrap.py  _audit_r32.py  _audit_r32_r16.py  _inspect_qf_honest.py  _inspect_r16.py  _list_r16_scores.py  _qf_final.py  attempt_api_football.py  audit_context_duplicates.py  audit_duplicate_factor_reasons.json  audit_duplicate_factor_reasons.py  audit_factor_sign_alignment.py  audit_group_accuracy.json  audit_group_accuracy.py  audit_group_match_context.py  audit_group_reflection.json  audit_group_reflection.py  audit_knockout_round.py  audit_lead_repetition.py  audit_lead_summaries.json  audit_lead_summaries.py  audit_narrative_quality.py  audit_persistent_versus_overlap.py  audit_pick_truth.json  audit_pick_truth.py  audit_research_clarity.json  audit_research_clarity.py  audit_research_display.py  (+11 more)
(+158 files in other folders)
